--- a/ethics.html
+++ b/ethics.html
@@ -23,7 +23,7 @@
         </section>
 
         <!-- Content Sections -->
-        <section>
+        <section class="content">
             <h2>What is IT Ethics?</h2>
             <p>IT Ethics deals with the ethical dilemmas and responsibilities faced by those working in technology. Learn more about key guidelines and considerations to build a better future.</p>
         </section>
