--- a/ethics.html
+++ b/ethics.html
@@ -24,18 +24,23 @@
 
         <!-- Content Sections -->
         <section class="content">
-            <h2>What is IT Ethics?</h2>
-            <p>IT Ethics deals with the ethical dilemmas and responsibilities faced by those working in technology. Learn more about key guidelines and considerations to build a better future.</p>
+            <h2>What are IT Ethics?</h2>
+            <p>IT Ethics deals with the ethical problems and responsibilities faced by those working in technology. People should learn more about key guidelines and considerations to build a better future for themselves.</p>
         </section>
 
         <section class="content">
-            <h2>Guidelines for Developers</h2>
-            <p>Developers must follow principles like data privacy, transparency, and bias-free algorithms. For more, check the <a href="https://www.acm.org/code-of-ethics" target="_blank">ACM Code of Ethics</a>.</p>
+            <h2>Some Guidelines for Developers</h2>
+            <p>Some guidelines that developers must follow are data privacy, transparency, and bias-free algorithms. These are very important in the IT world, because it ensures that people are being ethical and trustworthy.
+             </p>
         </section>
 
         <section class="content">
             <h2>Ethical Considerations for Data Scientists</h2>
-            <p>Data scientists should prioritize user consent, ensure fairness, and follow data protection regulations.</p>
+            <p> Ethical considerations for data scientists revolve around ensuring fairness, privacy, and accountability in handling important data. Data privacy is very important as it requires professionals to keep individuals information safe, comply with legal standards,
+                and adopt frameworks like the National Institute of Standards and Technology (NIST) to manage risks and protect confidentiality. Addressing bias and fairness is also crucial, as datasets and algorithms can unintentionally favor certain groups or exclude others
+                Data scientists must actively identify and mitigate biases, such as confirmation bias, to ensure positive outcomes. Transparency is another piece, it demands clarity in data collection, usage, and sharing, alongside providing explainable decision-making processes.
+                Lastly, accountability is essential, with data scientists maintaining detailed records of their methods and regulations. These principles collectively uphold trust and integrity in the growing field of data science.</p>
+            <p> *Maryville University. “Data Science Ethics: Issues and Strategies.” Maryville University Online, 11 Oct. 2023, online.maryville.edu/online-masters-degrees/data-science/careers/data-science-ethics-issues-and-strategies/. </p>
         </section>
     </main>
     <footer>
